@@ -1,4 +1,4 @@
 {% load i18n creme_widgets %}{% if object is None %}{% translate 'The alert has been deleted' %}{% else %}<h1>{{object.title}}</h1>
 {% if object.description %}{{object.description|linebreaks}}{% endif %}
-{% widget_entity_hyperlink object.real_entity user as entity %}{% blocktranslate %}Related to {{entity}}{% endblocktranslate %}
+{% widget_entity_hyperlink object.real_entity user=user relative=False as entity %}{% blocktranslate %}Related to {{entity}}{% endblocktranslate %}
 {% endif %}
